script now checks for duplicate elements in db, stores asr data as a single string

--- a/scribalizer/package.json
+++ b/scribalizer/package.json
@@ -13,5 +13,8 @@
         "electron": "^1.4.1",
         "electron-builder": "20.2.0",
         "electron-reload": "^1.2.2"
+    },
+    "dependencies": {
+        "pg": "^7.8.0"
     }
 }
