--- a/scribalizer/package.json
+++ b/scribalizer/package.json
@@ -10,11 +10,7 @@
         "postinstall": "install-app-deps"
     },
     "devDependencies": {
-        "electron": "^1.4.1",
-        "electron-builder": "20.2.0",
-        "electron-reload": "^1.2.2"
-    },
-    "dependencies": {
-        "pg": "^7.8.0"
+        "electron": "^3.1.2",
+        "electron-builder": "20.38.5"
     }
 }
